--- a/frontend/src/Pages/Quest/style.css
+++ b/frontend/src/Pages/Quest/style.css
@@ -11,14 +11,16 @@
 }
 
 .quest-body h1 {
-  text-align: center;
+  text-align: left;
   padding: 20px;
+  margin-left: 50px;
   margin-bottom: 10px;
 }
 
 .quest-body p {
-  text-align: center;
+  text-align: left;
   padding: 20px;
+  margin-left: 50px;
   margin-bottom: 50px;
   font-size: 18px;
   color: #666;
@@ -26,7 +28,7 @@
 
 .quest-body-row {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   justify-content: center;
   gap: 30px;
   padding: 20px;
