--- a/frontend/src/Pages/Profile/style.css
+++ b/frontend/src/Pages/Profile/style.css
@@ -110,12 +110,17 @@
   align-items: center;
   width: 100%;
   height: fit-content;
+  padding: 20px;
+  background-color: white;
+  border: 1px solid #e0e0e0;
+  border-radius: 8px;
 }
 
 .profile-avatar {
+  width: 100%;
+  display: block;
   max-height: 300px;
   max-width: 100%;
-  object-fit: contain;
   border-radius: 8px;
   margin-right: 0;
 }
